fix overflow and maybe incons

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -21,7 +21,7 @@ body {
 main {
   overflow-y: auto;
   height: 100vh;
-  padding: 20px 30px 0 30px;
+  padding: 30px 0;
   border-right: 1px solid #eff3f4;
   scrollbar-width: none;
 }
@@ -157,6 +157,10 @@ main::-webkit-scrollbar {
   font-size: 12px !important;
   font-weight: 600;
   line-height: 1;
+}
+
+.icon{
+  color: black;
 }
 
 .profile-tag {
